Initial import of lineagehw
All credits to LineageOS and related authors on:

https://github.com/LineageOS/android_lineage-sdk

Signed-off-by: Henrique Silva <jhenrique09.mcz@hotmail.com>
Change-Id: Ief90ce8c20115d6a1c17c84a9874af6246dc1dcd
Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -7699,6 +7699,13 @@
     <!-- Receive battery status change directly -->
     <protected-broadcast android:name="custom.intent.action.BATTERY_CHARGE_CHANGED" />
 
+    <!-- LineageHardware -->
+    <protected-broadcast android:name="lineageos.intent.action.INITIALIZE_LINEAGE_HARDWARE" />
+
+    <!-- @hide -->
+    <permission android:name="lineageos.permission.HARDWARE_ABSTRACTION_ACCESS"
+                android:protectionLevel="signature|privileged" />
+
     <application android:process="system"
                  android:persistent="true"
                  android:hasCode="false"
