Add support for battery charge change action intent
Used for battery charge limiter. Has been forward-ported to 14.
Only for system apps and does not require registering a receiver.

Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

ActivityManagerService: explicitly mark ACTION_BATTERY_CHARGE_CHANGED as protected

Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

Remove rest of RECEIVE_BATTERY_CHARGE_UPDATES perm

Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

Make Battery Charge Limiter work

Forward-ported to Android 14 (needed to modify BroadcastSkipPolicy instead
of BroadcastQueue)

Change-Id: I4b4886e6086aae2b9390ee71b33988965eb6992a
Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

forward-port to 13: BatteryService: fixup charge change intent extras

Signed-off-by: Simão Gomes Viana <devel@superboring.dev>

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -7679,6 +7679,9 @@
     <attribution android:tag="DevicePolicyManagerService"
         android:label="@string/device_policy_manager_service"/>
 
+    <!-- Receive battery status change directly -->
+    <protected-broadcast android:name="custom.intent.action.BATTERY_CHARGE_CHANGED" />
+
     <application android:process="system"
                  android:persistent="true"
                  android:hasCode="false"
