--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -7696,6 +7696,9 @@
     <attribution android:tag="DevicePolicyManagerService"
         android:label="@string/device_policy_manager_service"/>
 
+    <!-- Receive battery status change directly -->
+    <protected-broadcast android:name="custom.intent.action.BATTERY_CHARGE_CHANGED" />
+
     <application android:process="system"
                  android:persistent="true"
                  android:hasCode="false"
